# weather

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
theme/templates/: base.html
weather/: urls.py  views.py  weather.py
weather/templates/pages/: home.html  index.html
